--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,63 +5,63 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇨🇳 中国-332.7KB/s(Youtube:不良林), server: 36.134.156.5, port: 65086, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: 36.134.156.5}}
-  - {name: 🇨🇳 中国-434.4KB/s(Youtube:不良林), server: 36.134.156.5, port: 65065, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: 36.134.156.5}}
-  - {name: 未知国家-2.20MB/s(Youtube:不良林), server: v116.v2dns.bar, port: 80, type: vmess, uuid: c97cf46e-1554-36cb-8b36-c3556b883dc4, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /v116-DtoEwAEX, ws-headers: {Host: v116.v2dns.bar}}
-  - {name: 🇺🇸 美国-19.94MB/s(Youtube:不良林), server: azhk.sharecentre.xyz, port: 58975, type: vmess, uuid: f0e9aff1-ba59-4af4-f3a1-6d17fffb4aca, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /Sharecentrepro, ws-headers: {Host: azhk.sharecentre.xyz}}
-  - {name: 🇨🇳 中国-2.02MB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 34002, type: trojan, password: 177501cc-f0c2-3cc3-b9a7-8c1e8e27655f, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-1.29MB/s(Youtube:不良林), server: free-node-ar-1.texo.network, port: 8443, type: trojan, password: 91fc891c-510f-3a1b-aa77-9bee2c759522, sni: free-node-ar-1.texo.network, skip-cert-verify: true}
-  - {name: 🇷🇺 俄罗斯联邦-323.6KB/s(Youtube:不良林), server: 45.8.230.253, port: 852, type: vmess, uuid: 35b021ff-cf42-4b32-aeb7-4f634363df40, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /api/v3/download.getFile, ws-headers: {Host: 45.8.230.253}}
-  - {name: 🇷🇺 俄罗斯联邦-329.3KB/s(Youtube:不良林), server: 45.8.230.253, port: 852, type: vmess, uuid: 82c73cff-ade4-41a5-a33c-c6f6a7f6f533, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /api/v3/download.getFile, ws-headers: {Host: 45.8.230.253}}
-  - {name: 🇺🇸 美国-432.5KB/s(Youtube:不良林), server: sg.guiqing.ml, port: 43956, type: vmess, uuid: 91df6837-896d-45bc-ec6f-0fe4b792b369, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-345.5KB/s(Youtube:不良林), server: 36.134.156.5, port: 65065, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: 36.134.156.5}}
   - {name: 🇰🇷 韩国-553.3KB/s(Youtube:不良林), server: chess.magicefire.com, port: 443, type: vmess, uuid: 9aa80017-3427-4165-a522-f5f9a11330d0, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true}
+  - {name: 🇸🇬 新加坡-2.56MB/s(Youtube:不良林), server: 54.179.88.143, port: 443, type: ss, cipher: aes-256-cfb, password: amazonskr05}
+  - {name: 🇺🇸 美国-2.99MB/s(Youtube:不良林), server: v116.v2dns.bar, port: 80, type: vmess, uuid: c97cf46e-1554-36cb-8b36-c3556b883dc4, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /v116-DtoEwAEX, ws-headers: {Host: v116.v2dns.bar}}
+  - {name: 🇨🇳 中国-393.2KB/s(Youtube:不良林), server: best04.downloadmovie.cn, port: 65093, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: best04.downloadmovie.cn}}
+  - {name: 🇨🇳 中国-326.4KB/s(Youtube:不良林), server: best01.downloadmovie.cn, port: 65091, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: best01.downloadmovie.cn}}
+  - {name: 🇺🇸 美国-318.5KB/s(Youtube:不良林), server: azgy001.xiba1.xyz, port: 20712, type: trojan, password: 7497242f-3044-3c77-bf48-14bb26c92a83, sni: azgy001.xiba1.xyz, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-311.8KB/s(Youtube:不良林), server: 120.233.150.146, port: 65092, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: 120.233.150.146}}
+  - {name: 🇨🇳 中国-527.1KB/s(Youtube:不良林), server: 116.129.254.177, port: 65065, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: 116.129.254.177}}
+  - {name: 🇨🇳 中国-429.2KB/s(Youtube:不良林), server: 116.129.254.177, port: 65007, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: 116.129.254.177}}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-332.7KB/s(Youtube:不良林)
-      - 🇨🇳 中国-434.4KB/s(Youtube:不良林)
-      - 未知国家-2.20MB/s(Youtube:不良林)
-      - 🇺🇸 美国-19.94MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.02MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.29MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-323.6KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-329.3KB/s(Youtube:不良林)
-      - 🇺🇸 美国-432.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-345.5KB/s(Youtube:不良林)
       - 🇰🇷 韩国-553.3KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-2.56MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.99MB/s(Youtube:不良林)
+      - 🇨🇳 中国-393.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-326.4KB/s(Youtube:不良林)
+      - 🇺🇸 美国-318.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-311.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-527.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-429.2KB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇨🇳 中国-332.7KB/s(Youtube:不良林)
-      - 🇨🇳 中国-434.4KB/s(Youtube:不良林)
-      - 未知国家-2.20MB/s(Youtube:不良林)
-      - 🇺🇸 美国-19.94MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.02MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.29MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-323.6KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-329.3KB/s(Youtube:不良林)
-      - 🇺🇸 美国-432.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-345.5KB/s(Youtube:不良林)
       - 🇰🇷 韩国-553.3KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-2.56MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.99MB/s(Youtube:不良林)
+      - 🇨🇳 中国-393.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-326.4KB/s(Youtube:不良林)
+      - 🇺🇸 美国-318.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-311.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-527.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-429.2KB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-332.7KB/s(Youtube:不良林)
-      - 🇨🇳 中国-434.4KB/s(Youtube:不良林)
-      - 未知国家-2.20MB/s(Youtube:不良林)
-      - 🇺🇸 美国-19.94MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.02MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.29MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-323.6KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-329.3KB/s(Youtube:不良林)
-      - 🇺🇸 美国-432.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-345.5KB/s(Youtube:不良林)
       - 🇰🇷 韩国-553.3KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-2.56MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.99MB/s(Youtube:不良林)
+      - 🇨🇳 中国-393.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-326.4KB/s(Youtube:不良林)
+      - 🇺🇸 美国-318.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-311.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-527.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-429.2KB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
@@ -72,47 +72,47 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇨🇳 中国-332.7KB/s(Youtube:不良林)
-      - 🇨🇳 中国-434.4KB/s(Youtube:不良林)
-      - 未知国家-2.20MB/s(Youtube:不良林)
-      - 🇺🇸 美国-19.94MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.02MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.29MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-323.6KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-329.3KB/s(Youtube:不良林)
-      - 🇺🇸 美国-432.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-345.5KB/s(Youtube:不良林)
       - 🇰🇷 韩国-553.3KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-2.56MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.99MB/s(Youtube:不良林)
+      - 🇨🇳 中国-393.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-326.4KB/s(Youtube:不良林)
+      - 🇺🇸 美国-318.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-311.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-527.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-429.2KB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇨🇳 中国-332.7KB/s(Youtube:不良林)
-      - 🇨🇳 中国-434.4KB/s(Youtube:不良林)
-      - 未知国家-2.20MB/s(Youtube:不良林)
-      - 🇺🇸 美国-19.94MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.02MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.29MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-323.6KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-329.3KB/s(Youtube:不良林)
-      - 🇺🇸 美国-432.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-345.5KB/s(Youtube:不良林)
       - 🇰🇷 韩国-553.3KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-2.56MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.99MB/s(Youtube:不良林)
+      - 🇨🇳 中国-393.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-326.4KB/s(Youtube:不良林)
+      - 🇺🇸 美国-318.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-311.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-527.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-429.2KB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-332.7KB/s(Youtube:不良林)
-      - 🇨🇳 中国-434.4KB/s(Youtube:不良林)
-      - 未知国家-2.20MB/s(Youtube:不良林)
-      - 🇺🇸 美国-19.94MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.02MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.29MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-323.6KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-329.3KB/s(Youtube:不良林)
-      - 🇺🇸 美国-432.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-345.5KB/s(Youtube:不良林)
       - 🇰🇷 韩国-553.3KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-2.56MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.99MB/s(Youtube:不良林)
+      - 🇨🇳 中国-393.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-326.4KB/s(Youtube:不良林)
+      - 🇺🇸 美国-318.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-311.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-527.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-429.2KB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -128,16 +128,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-332.7KB/s(Youtube:不良林)
-      - 🇨🇳 中国-434.4KB/s(Youtube:不良林)
-      - 未知国家-2.20MB/s(Youtube:不良林)
-      - 🇺🇸 美国-19.94MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.02MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.29MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-323.6KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-329.3KB/s(Youtube:不良林)
-      - 🇺🇸 美国-432.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-345.5KB/s(Youtube:不良林)
       - 🇰🇷 韩国-553.3KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-2.56MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.99MB/s(Youtube:不良林)
+      - 🇨🇳 中国-393.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-326.4KB/s(Youtube:不良林)
+      - 🇺🇸 美国-318.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-311.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-527.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-429.2KB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
