--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,11 +5,11 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇨🇳 中国-364.3KB/s(Youtube:不良林), server: 36.134.156.5, port: 65086, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: 36.134.156.5}}
-  - {name: 🇨🇳 中国-549.3KB/s(Youtube:不良林), server: best04.downloadmovie.cn, port: 65078, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: best04.downloadmovie.cn}}
-  - {name: 🇨🇳 中国-463.7KB/s(Youtube:不良林), server: best01.downloadmovie.cn, port: 65090, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: best01.downloadmovie.cn}}
-  - {name: 🇨🇳 中国-311.8KB/s(Youtube:不良林), server: 120.233.150.146, port: 65092, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: 120.233.150.146}}
-  - {name: 🇨🇳 中国-519.9KB/s(Youtube:不良林), server: 120.233.150.146, port: 65073, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: 120.233.150.146}}
+  - {name: 🇨🇳 中国-7.56MB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 34000, type: trojan, password: 2f606ee8-3cfa-30b2-a191-f88efe912f5c, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-174.6KB/s(Youtube:不良林), server: best03.downloadmovie.cn, port: 65088, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: best03.downloadmovie.cn}}
+  - {name: 🇸🇬 新加坡-3.64MB/s(Youtube:不良林), server: s3.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s3.hazz.win, skip-cert-verify: true}
+  - {name: 🇫🇷 法国-3.01MB/s(Youtube:不良林), server: 51.195.35.134, port: 443, type: vmess, uuid: 9f58234c-355b-4065-ae21-d4a63099aba5, alterId: 64, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /path/273213070933, ws-headers: {Host: 51.195.35.134}}
+  - {name: 🇹🇭 泰国-2.16MB/s(Youtube:不良林), server: 119.59.116.248, port: 17159, type: trojan, password: PHnvNV7HGp, skip-cert-verify: true}
   - {name: 🇨🇳 中国-333.4KB/s(Youtube:不良林), server: ingress-i2.iivvppnn.info, port: 38106, type: vmess, uuid: 79386685-16da-327c-9e14-aa6d702d86bc, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /hls/cctv5phd.m3u8, ws-headers: {Host: ingress-i2.iivvppnn.info}}
   - {name: 🇨🇳 中国-394.6KB/s(Youtube:不良林), server: best02.downloadmovie.cn, port: 65097, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: best02.downloadmovie.cn}}
   - {name: 🇨🇳 中国-311.1KB/s(Youtube:不良林), server: best01.downloadmovie.cn, port: 65070, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: best01.downloadmovie.cn}}
@@ -21,11 +21,11 @@ proxy-groups:
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-364.3KB/s(Youtube:不良林)
-      - 🇨🇳 中国-549.3KB/s(Youtube:不良林)
-      - 🇨🇳 中国-463.7KB/s(Youtube:不良林)
-      - 🇨🇳 中国-311.8KB/s(Youtube:不良林)
-      - 🇨🇳 中国-519.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-7.56MB/s(Youtube:不良林)
+      - 🇨🇳 中国-174.6KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-3.64MB/s(Youtube:不良林)
+      - 🇫🇷 法国-3.01MB/s(Youtube:不良林)
+      - 🇹🇭 泰国-2.16MB/s(Youtube:不良林)
       - 🇨🇳 中国-333.4KB/s(Youtube:不良林)
       - 🇨🇳 中国-394.6KB/s(Youtube:不良林)
       - 🇨🇳 中国-311.1KB/s(Youtube:不良林)
@@ -36,11 +36,11 @@ proxy-groups:
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇨🇳 中国-364.3KB/s(Youtube:不良林)
-      - 🇨🇳 中国-549.3KB/s(Youtube:不良林)
-      - 🇨🇳 中国-463.7KB/s(Youtube:不良林)
-      - 🇨🇳 中国-311.8KB/s(Youtube:不良林)
-      - 🇨🇳 中国-519.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-7.56MB/s(Youtube:不良林)
+      - 🇨🇳 中国-174.6KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-3.64MB/s(Youtube:不良林)
+      - 🇫🇷 法国-3.01MB/s(Youtube:不良林)
+      - 🇹🇭 泰国-2.16MB/s(Youtube:不良林)
       - 🇨🇳 中国-333.4KB/s(Youtube:不良林)
       - 🇨🇳 中国-394.6KB/s(Youtube:不良林)
       - 🇨🇳 中国-311.1KB/s(Youtube:不良林)
@@ -52,11 +52,11 @@ proxy-groups:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-364.3KB/s(Youtube:不良林)
-      - 🇨🇳 中国-549.3KB/s(Youtube:不良林)
-      - 🇨🇳 中国-463.7KB/s(Youtube:不良林)
-      - 🇨🇳 中国-311.8KB/s(Youtube:不良林)
-      - 🇨🇳 中国-519.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-7.56MB/s(Youtube:不良林)
+      - 🇨🇳 中国-174.6KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-3.64MB/s(Youtube:不良林)
+      - 🇫🇷 法国-3.01MB/s(Youtube:不良林)
+      - 🇹🇭 泰国-2.16MB/s(Youtube:不良林)
       - 🇨🇳 中国-333.4KB/s(Youtube:不良林)
       - 🇨🇳 中国-394.6KB/s(Youtube:不良林)
       - 🇨🇳 中国-311.1KB/s(Youtube:不良林)
@@ -72,11 +72,11 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇨🇳 中国-364.3KB/s(Youtube:不良林)
-      - 🇨🇳 中国-549.3KB/s(Youtube:不良林)
-      - 🇨🇳 中国-463.7KB/s(Youtube:不良林)
-      - 🇨🇳 中国-311.8KB/s(Youtube:不良林)
-      - 🇨🇳 中国-519.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-7.56MB/s(Youtube:不良林)
+      - 🇨🇳 中国-174.6KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-3.64MB/s(Youtube:不良林)
+      - 🇫🇷 法国-3.01MB/s(Youtube:不良林)
+      - 🇹🇭 泰国-2.16MB/s(Youtube:不良林)
       - 🇨🇳 中国-333.4KB/s(Youtube:不良林)
       - 🇨🇳 中国-394.6KB/s(Youtube:不良林)
       - 🇨🇳 中国-311.1KB/s(Youtube:不良林)
@@ -87,11 +87,11 @@ proxy-groups:
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇨🇳 中国-364.3KB/s(Youtube:不良林)
-      - 🇨🇳 中国-549.3KB/s(Youtube:不良林)
-      - 🇨🇳 中国-463.7KB/s(Youtube:不良林)
-      - 🇨🇳 中国-311.8KB/s(Youtube:不良林)
-      - 🇨🇳 中国-519.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-7.56MB/s(Youtube:不良林)
+      - 🇨🇳 中国-174.6KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-3.64MB/s(Youtube:不良林)
+      - 🇫🇷 法国-3.01MB/s(Youtube:不良林)
+      - 🇹🇭 泰国-2.16MB/s(Youtube:不良林)
       - 🇨🇳 中国-333.4KB/s(Youtube:不良林)
       - 🇨🇳 中国-394.6KB/s(Youtube:不良林)
       - 🇨🇳 中国-311.1KB/s(Youtube:不良林)
@@ -103,11 +103,11 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-364.3KB/s(Youtube:不良林)
-      - 🇨🇳 中国-549.3KB/s(Youtube:不良林)
-      - 🇨🇳 中国-463.7KB/s(Youtube:不良林)
-      - 🇨🇳 中国-311.8KB/s(Youtube:不良林)
-      - 🇨🇳 中国-519.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-7.56MB/s(Youtube:不良林)
+      - 🇨🇳 中国-174.6KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-3.64MB/s(Youtube:不良林)
+      - 🇫🇷 法国-3.01MB/s(Youtube:不良林)
+      - 🇹🇭 泰国-2.16MB/s(Youtube:不良林)
       - 🇨🇳 中国-333.4KB/s(Youtube:不良林)
       - 🇨🇳 中国-394.6KB/s(Youtube:不良林)
       - 🇨🇳 中国-311.1KB/s(Youtube:不良林)
@@ -128,11 +128,11 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-364.3KB/s(Youtube:不良林)
-      - 🇨🇳 中国-549.3KB/s(Youtube:不良林)
-      - 🇨🇳 中国-463.7KB/s(Youtube:不良林)
-      - 🇨🇳 中国-311.8KB/s(Youtube:不良林)
-      - 🇨🇳 中国-519.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-7.56MB/s(Youtube:不良林)
+      - 🇨🇳 中国-174.6KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-3.64MB/s(Youtube:不良林)
+      - 🇫🇷 法国-3.01MB/s(Youtube:不良林)
+      - 🇹🇭 泰国-2.16MB/s(Youtube:不良林)
       - 🇨🇳 中国-333.4KB/s(Youtube:不良林)
       - 🇨🇳 中国-394.6KB/s(Youtube:不良林)
       - 🇨🇳 中国-311.1KB/s(Youtube:不良林)
